fix wrapping on list views

--- a/app/assets/stylesheets/playlists_index.css.scss
+++ b/app/assets/stylesheets/playlists_index.css.scss
@@ -115,6 +115,10 @@
 ////// Media /////////
 
 .media-thumbnails.wrap {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
   @include flex-wrap(wrap);
 }
 .media-container.index-view {
